exports[`DataAdapter getReactStartingData returns the expected object for a new Images template 1`] = `
Object {
  "isPreview": false,
  "resolutionId": 5,
  "resolutions": Array [
    Object {
      "id": 5,
      "name": "720p",
    },
    Object {
      "id": 3,
      "name": "1080p",
    },
    Object {
      "id": 4,
      "name": "4K",
    },
  ],
  "userImages": Array [
    Object {
      "id": 0,
      "url": "DonDentonAdmin_1-23-2017_94956756.png",
    },
    Object {
      "id": 1,
      "url": "DonDentonAdmin_1-23-2017_9502787.jpg",
    },
    Object {
      "id": 2,
      "url": "DonDentonAdmin_1-23-2017_9505506.png",
    },
  ],
}
`;

exports[`DataAdapter getReactStartingData returns the expected object for a new TextOnly 1`] = `
Object {
  "isPreview": false,
  "resolutionId": 5,
  "resolutions": Array [
    Object {
      "id": 5,
      "name": "720p",
    },
    Object {
      "id": 3,
      "name": "1080p",
    },
    Object {
      "id": 4,
      "name": "4K",
    },
  ],
}
`;

exports[`DataAdapter getReactStartingData returns the expected object for a previously created TextOnly 1`] = `
Object {
  "audioInfo": Object {
    "audioType": "StockAudio",
    "audioUrl": "https://fpsound.s3.amazonaws.com/13.mp3",
    "id": 13,
    "length": 0,
    "name": "Bunny Garden",
  },
  "isPreview": true,
  "nameValuePairs": Array [
    Object {
      "name": "Icon Style",
      "value": "camera",
    },
    Object {
      "name": "Icon Character - type in only one (optional)",
      "value": "q",
    },
    Object {
      "name": "Background",
      "value": "camo",
    },
    Object {
      "name": "Icon Color",
      "value": "icon_pink",
    },
    Object {
      "name": "Main Text Color",
      "value": "main_orange",
    },
    Object {
      "name": "Subtitle Text Color",
      "value": "sub_white",
    },
    Object {
      "name": "Text Left of Icon",
      "value": "Left",
    },
    Object {
      "name": "Text Right of Icon",
      "value": "Right",
    },
    Object {
      "name": "Subtitle",
      "value": "Bottom",
    },
  ],
  "resolutionId": 5,
  "resolutions": Array [
    Object {
      "id": 5,
      "name": "720p",
    },
    Object {
      "id": 3,
      "name": "1080p",
    },
  ],
}
`;
